@@ -1,7 +1,8 @@
 2007-08-27  Badlop  <badlop@ono.com>
 
-	* src/mod_webpresence.erl: Enforce Hash and JID options in a web request. The Hash is now a pseudo random integer. Added support for avatar output. Added support to show image of a specific resource. Improved Form, Message and Web.
+	* README.txt: Updated description of configurable options.
 	
+	* src/mod_webpresence.erl: Enforce Hash and JID options in a web request. The Hash is now a pseudo random integer. Added support for avatar output. Added support to show image of a specific resource. Improved Form, Message and Web. Added module options Port and Path. Improved message with instructions.
 
 2007-08-26  Badlop  <badlop@ono.com>
 
